@@ -877,6 +877,27 @@ else if (Prototype.Browser.IE) {
       onchange:    v._getEv
     });
   })(Element._attributeTranslations.read.values);
+
+  // Wrap Element#update and Element#replace to clean up event handlers on 
+  // newly-removed elements. Prevents memory leaks in IE.  
+  Element._purgeObservers = function(element, includeRoot) {
+    Element.select(element, '*').each(Event.stopObserving);
+    if (includeRoot === true) Event.stopObserving(element);
+  };
+    
+  Element.Methods.update = Element.Methods.update.wrap(
+    function(proceed, element, contents) {
+      Element._purgeObservers(element, false);
+      return proceed(element, contents);
+    }
+  );
+  
+  Element.Methods.replace = Element.Methods.replace.wrap(
+    function(proceed, element, contents) {
+      Element._purgeObservers(element, true);
+      return proceed(element, contents);
+    }
+  );  
 }
 
 else if (Prototype.Browser.Gecko && /rv:1\.8\.0/.test(navigator.userAgent)) {
